# versionamento_ia_groq

./: .env.example  .gitignore  CORRECAO_FILTRO_24H.md  README.md  RELATORIO_MELHORIAS.md  api.py  main.py  pyproject.toml  pytest.ini  webhook_server.py
core/: __init__.py  ai_engine.py  git_provider.py  logger.py  notifier.py  processor.py
scripts/: README.md  manage_log.bat  reset_log.bat  restart_api.bat  run_hidden.vbs  start_api.bat  status_api.bat  stop_api.bat
static/css/: style.css
templates/: base.html  index.html  repo.html  report.html
tests/: __init__.py  conftest.py  test_ai_engine.py  test_api.py  test_git_provider.py  test_processor.py
